--- a/input.css
+++ b/input.css
@@ -56,3 +56,19 @@
     background-size:cover;
     background-repeat:no-repeat;
 }
+
+
+/* HAMBUREGR */
+/* 
+.hamburger{
+    height:24px;
+    width:24px;
+    position:relative;
+    transition: all 0.3s;
+    transform: rotate(0deg); 
+}
+
+.hamburger-top,
+.hamburger-bottom{
+
+} */
